# vldwm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: Doxyfile.in
examples/: CMakeLists.txt  simple_client.c  window_example.c
src/: main.c
src/input/: input.c
src/renderer/: display.c
